<resources>
    <string name="app_name">Review</string>
    <string name="drawer_open">开</string>
    <string name="drawer_close">关</string>
    <string name="exit_app">再按一次退出程序</string>

    <!--easy weather app-->
    <string name="next_15_days_label">15日天气</string>
    <string name="current_weather">当日天气</string>
    <string name="humidity_label">湿度: </string>
    <string name="wind_label">风力</string>
    <string name="next_5_days_daily">5天预报</string>
    <string name="city">管理城市</string>
    <string name="more">更多</string>
    <string name="title">温馨提示</string>
    <string name="delete_city">是否删除当前城市？</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="temp">℃</string>
    <string name="percent">%</string>
    <string name="weather">Weather</string>
    <string name="setting_about">关于</string>
    <string name="setting_project">开源项目</string>
    <string name="setting_version">检查更新</string>
    <string name="no_version">已经是最新版本啦~</string>
    <string name="new_version">有最新版本可更新：</string>
    <string name="check_update_fail">检查新版本失败</string>
    <string name="down_load_fail">下载安装包失败</string>
    <string name="updating">正在更新</string>
    <string name="done">确定</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_summary">仅作个人学习及非商业用途</string>
    <string name="auther">作者</string>
    <string name="auther_name">WjxBless</string>
    <string name="project_address">项目源码</string>
    <string name="github_url">https://github.com/wangjianxiandev/Weather</string>
    <string name="error_message">发生了一些错误</string>
    <string name="empty_message">没有数据哎~</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--iMusic App-->
    <string name="imusic_tab_me">我的</string>
    <string name="imusic_tab_find">首页</string>
    <string name="imusic_tab_cloud_village">发现</string>
    <string name="imusic_tab_video">公众号</string>
    <string name="imusic_tab_song">单曲</string>
    <string name="gedan">歌单</string>
    <string name="mv">MV</string>
    <string name="imusic_tab_album">专辑</string>
    <string name="play_time_start">00:00</string>
    <string name="loading">努力加载中…</string>
    <string name="play_all">播放全部</string>
    <string name="duoxuan">多选</string>
    <string name="login_now">立即登录</string>
    <string name="music_local">本地音乐</string>
    <string name="music_download">已下载</string>
    <string name="music_recisent">最近播放</string>
    <string name="music_yigou">已购</string>
    <string name="music_my_love">我喜欢的音乐</string>
    <string name="imusic_create_gedaan">创建歌单</string>
    <string name="imusic_shoucanggedan">收藏歌单</string>
    <string name="imusic_no_shoucanggedan">暂无收藏歌单</string>
    <string name="imusic_tuijian">推荐歌单</string>
    <string name="downloaded">已下载</string>
    <string name="downloading">下载中</string>
    <string name="local_music">本地音乐</string>
    <string name="download_music">下载歌曲</string>
    <string name="refresh_music">刷新看看</string>
    <string name="no_local_mv">木有MV</string>
    <string name="no_local_song">没有找到本地音乐的吖o(π π)o</string>
    <string name="order_play">顺序播放</string>
    <string name="random_play">随机播放</string>
    <string name="single_play">单曲循环</string>
    <string name="refresh">刷新</string>
    <string name="play_error">播放出错：我也不晓得出了啥子错误o(╥﹏╥)o</string>
    <string name="lrc_empty">还没发现歌词￣へ￣</string>
    <string name="empty_common">空空如也 O v O </string>
    <string name="no_mv">~~~没有没有没有MV~~~</string>
    <string name="local_no_need_download">~~本地歌曲，无需下载~~</string>
    <string name="song_has_download">歌曲已经下载啦~~ (*^▽^*) </string>
    <string name="net_work_error">当前网络出错了o(╥﹏╥)o</string>
    <string name="try_net_work">请连接网络后点击屏幕重试</string>
    <string name="error_donot_know">未知错误~~</string>
    <string name="request_error">请求出错</string>
    <string name="personalized_dress">个性装扮</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="timed_off">定时关闭</string>
    <string name="about_me">关于我</string>
    <string name="night_mode">夜间模式</string>
</resources>