<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_personalized_dress"
            android:icon="@drawable/ic_chengzi"
            android:title="@string/personalized_dress" />
        <item
            android:id="@+id/action_help_feedback"
            android:icon="@drawable/ic_chengzi"
            android:title="@string/help_feedback" />
        <item
            android:id="@+id/action_timed_off"
            android:icon="@drawable/ic_chengzi"
            android:title="@string/timed_off" />
        <item
            android:id="@+id/action_about_me"
            android:icon="@drawable/ic_chengzi"
            android:title="@string/about_me" />
        <item
            android:id="@+id/action_night_mode"
            android:icon="@drawable/ic_chengzi"
            android:title="@string/night_mode" />
    </group>

</menu>